# thinqconnect-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
thinqconnect_mcp/: __init__.py  prompts.py  server.py  tools.py
